# TauMLTools

./: .gitignore  .gitmodules  CMakeLists.txt  DataMixer.h  EventDrop.h  EventDrop.py  EventMix.py  README.md  README_adversarial.md  TauMLTools.code-workspace  bootstrap.sh  check_deps.py  common.cmake  env.sh  print_DeepTauIdInput.patch  requested.txt  submit_stau.sh  tau-ml-env.yaml
Analysis/config/: dy_vs_emb_inputs.cfg  testing_inputs.cfg  testing_inputs_Phase2HLT.cfg  training_inputs.cfg  training_inputs_e.cfg  training_inputs_e_Phase2HLT.cfg  training_inputs_jet.cfg  training_inputs_jet_Phase2HLT.cfg  training_inputs_mu.cfg  training_inputs_mu_Phase2HLT.cfg  training_inputs_step2.cfg  training_inputs_step2_Phase2HLT.cfg  training_inputs_tau.cfg  training_inputs_tau_Phase2HLT.cfg
Analysis/include/: AnalysisTypes.h  SummaryTuple.h  TauIdResultTuple.h  TauIdResults.h  TauTuple.h  TrainingTuple.h
Analysis/interface/: AnalysisTypes.h  CPfunctions.h  DisTauTagSelection.h  GenLepton.h  L2EventTuple.h  PolarimetricA1.h  SCalculator.h  ShuffleTools.h  SummaryTuple.h  TauIdResultTuple.h  TauIdResults.h  TauSelection.h  TauTuple.h  TauTupleHLT.h  TrainTuple.h  TrainingTuple.h
Analysis/law/: bootstrap.sh  framework.py  law.cfg  setup.sh
Analysis/models/: deepTau_2017v1_20L1024N.pb.REMOVED.git-id  deepTau_v1_10L1024N.pb.REMOVED.git-id
Analysis/notebooks/: .gitignore  Checks.ipynb  DeepTauTest_v2.ipynb  DeepTau_v1.ipynb  DeepTau_v2.ipynb  DeepTau_v4.ipynb  Draft.ipynb  ExtractSpectrum.ipynb  PerformanceCheck.ipynb  ProcessResults.ipynb  WeightChecks.ipynb  tau_visualisation.ipynb
Analysis/python/: CPtest.py  CreateBinnedTuples.py  CreateSpectralHists.py  CreateTupleSizeList.py  DataLoader.py  ExtractSpectrumNanoAOD.py  MergeTuples.py  WeightManager.py  apply_training.py  clone.py  common.py  copy_tree.py  create_weights.py  deploy_model.py  evaluate_performance.py  fill_grid.pyx  hdf_to_root.py  keras_to_tensorflow.py  quantize_model.py  recompute_tautype.py  root_to_hdf.py  sf_calc.pyx  shuffle.py  skim.py  skim_tree.py  t_notify.py  variable_check.py  vis_graph.py
Analysis/scripts/: prepare_TauTuples.sh  prepare_TestingTuples.sh  prepare_TrainingTuples.sh  prepare_tuples.sh  run_all_test.ps1
Analysis/source/: ApplyTraining.cxx  CreateBalancedTuple.cxx  CreateBinnedTuples.cxx  MergeTuples.cxx  ShuffleMerge.cxx  ShuffleTuple.cxx  (+1 more)
Core/: BuildFile.xml
Documentation/: displaced.md
Evaluation/: apply_adversarial_training.py  apply_training.py  apply_training.yaml  derive_wp.py  eval_tools.py  evaluate_adversarial.ipynb  evaluate_performance.py  input_compare.py  input_compare.yaml  plot_roc.py  plot_roc.yaml  plot_wp_eff.py
Evaluation_reco/: apply_training.py  apply_training.yaml  plot_eval.py
LawWorkflows/: FeatureScaling.py  Hadd.py  RootToTF.py  ShuffleMergeSpectral.py  Training.py  framework.py  law.cfg
Preprocessing/: CreateSpectralHists.py  MergeTuples.cxx  ShuffleMergeSpectral.cxx  SimpleMergeMix.cxx
Production/: BuildFile.xml
law/: FeatureScaling.py  Hadd.py  ShuffleMergeSpectral.py  Training.py  framework.py  law.cfg
(+628 files in other folders)
